# inqlude-client

./: CMakeLists.txt  abstracthandler.cpp  abstracthandler.h  commandhandler.cpp  commandhandler.h  dataprovider.cpp  dataprovider.h  downloadhandler.cpp  downloadhandler.h  filedataprovider.cpp  filedataprovider.h  httpdataprovider.cpp  httpdataprovider.h  inqludeclient.cpp  inqludeclient.h  listhandler.cpp  listhandler.h  main.cpp
autotests/: CMakeLists.txt  filedatatest.cpp  inqlude-all.json
